Add link for Distribution and Probability section

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
             <div class="file-grid">
                 <a href="binary.html" class="file-link"><div class="file-name">Binary Numbers</div><div class="file-desc">Binary Number System</div></a>
                 <a href="binaryop.html" class="file-link"><div class="file-name">Binary Operations</div><div class="file-desc">Binary Arithmetic</div></a>
+                 <a href="distprob.html" class="file-link"><div class="file-name">Distribution and Probability</div><div class="file-desc">Statistics and Probability</div></a>
                 <a href="engnotation.html" class="file-link"><div class="file-name">Engineering Notation Activity</div><div class="file-desc">Engineering Notation Lab</div></a>
                 <a href="factors.html" class="file-link"><div class="file-name">Factors</div><div class="file-desc">Prime Factorization</div></a>
                 <a href="numbersystems.html" class="file-link"><div class="file-name">Number Systems</div><div class="file-desc">Multiple Base Systems</div></a>
@@ -226,8 +227,7 @@
                 <a href="linux.html" class="file-link"><div class="file-name">Linux</div><div class="file-desc">Linux Operating System</div></a>
                 <a href="plan.html" class="file-link"><div class="file-name">Student Academic Plan</div><div class="file-desc">Student Academic Plan Tool</div></a>
                 <a href="testing.html" class="file-link"><div class="file-name">Software Testing</div><div class="file-desc">Testing Methodologies</div></a>
-               
-            </div>
+             </div>
         </div>
 
         <div class="section">
