Update links and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="file-grid">
                 <a href="binary.html" class="file-link"><div class="file-name">Binary Numbers</div><div class="file-desc">Binary Number System</div></a>
                 <a href="binaryop.html" class="file-link"><div class="file-name">Binary Operations</div><div class="file-desc">Binary Arithmetic</div></a>
-                 <a href="distprob.html" class="file-link"><div class="file-name">Distribution and Probability</div><div class="file-desc">Statistics and Probability</div></a>
+                <a href="distprob.html" class="file-link"><div class="file-name">Distribution and Probability</div><div class="file-desc">Statistics and Probability</div></a>
                 <a href="engnotation.html" class="file-link"><div class="file-name">Engineering Notation Activity</div><div class="file-desc">Engineering Notation Lab</div></a>
                 <a href="factors.html" class="file-link"><div class="file-name">Factors</div><div class="file-desc">Prime Factorization</div></a>
                 <a href="numbersystems.html" class="file-link"><div class="file-name">Number Systems</div><div class="file-desc">Multiple Base Systems</div></a>
@@ -223,9 +223,17 @@
                 <a href="accuracy.html" class="file-link"><div class="file-name">Accuracy Testing</div><div class="file-desc">Algorithm Accuracy</div></a>
                 <a href="accuracy.html" class="file-link"><div class="file-name">Accuracy Testing</div><div class="file-desc">Algorithm Accuracy</div></a>
                 <a href="activity.html" class="file-link"><div class="file-name">Activity Log</div><div class="file-desc">System Activity Monitor</div></a>
+                <a href="arrays.html" class="file-link"><div class="file-name">Programming Arrays</div><div class="file-desc">Arrays</div></a>
                 <a href="commands.html" class="file-link"><div class="file-name">Command Reference</div><div class="file-desc">System Commands</div></a>
+                <a href="conditions.html" class="file-link"><div class="file-name">Conditions</div><div class="file-desc">Introduction to Programming Conditions</div></a>
+                <a href="cfunctions.html" class="file-link"><div class="file-name">Functions</div><div class="file-desc">The Function Machine</div></a>                           
                 <a href="linux.html" class="file-link"><div class="file-name">Linux</div><div class="file-desc">Linux Operating System</div></a>
-                <a href="plan.html" class="file-link"><div class="file-name">Student Academic Plan</div><div class="file-desc">Student Academic Plan Tool</div></a>
+                <a href="loops.html" class="file-link"><div class="file-name">Introduction to Programming Loops</div><div class="file-desc">Programming Fundamentals - Loops</div></a>
+                <a href="operations.html" class="file-link"><div class="file-name">Introduction to Programming Mathematical and Logical Operations</div><div class="file-desc">Programming Operators</div></a>             
+                <a href="plan.html" class="file-link"><div class="file-name">Student Academic Plan</div><div class="file-desc">Student Academic Plan Tool</div></a>                  
+                <a href="structures.html" class="file-link"><div class="file-name">Introduction to Data Structures</div><div class="file-desc"> data structures: Arrays, Lists, Stacks, and Queues</div></a>             
+                <a href="variables.html" class="file-link"><div class="file-name">Introduction to Programming Variables</div><div class="file-desc">Programming Fundamentals - Variables</div></a>
+                <a href="https://jjirik77.github.io/AI_Resources/flashcards.html" class="file-link"><div class="file-name">Programming Flashcards</div><div class="file-desc">Programming Fundamentals</div></a>
                 <a href="testing.html" class="file-link"><div class="file-name">Software Testing</div><div class="file-desc">Testing Methodologies</div></a>
              </div>
         </div>
