Add link to Computer Science Portal in index.html

--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
                 <a href="variables.html" class="file-link"><div class="file-name">Introduction to Programming Variables</div><div class="file-desc">Programming Fundamentals - Variables</div></a>
                 <a href="https://jjirik77.github.io/AI_Resources/flashcards.html" class="file-link"><div class="file-name">Programming Flashcards</div><div class="file-desc">Programming Fundamentals</div></a>
                 <a href="testing.html" class="file-link"><div class="file-name">Software Testing</div><div class="file-desc">Testing Methodologies</div></a>
-             </div>
+ <a href="cs101b.html" class="file-link"><div class="file-name">Computer Science Portal</div><div class="file-desc">CS101 Class</div></a>
+            </div>
         </div>
 
         <div class="section">
