Add link for Phlebotomy Problem-Solving resource

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
             <a href="bloodpressure.html" class="file-link"><div class="file-name">Blood Pressure</div><div class="file-desc">BP Monitoring</div></a>
              <a href="nurse101.html" class="file-link"><div class="file-name">Nursing 101</div><div class="file-desc">Clinical Reasoning Lab</div></a>           
             <a href="https://hafeezfaridi.github.io/AI-learning/Lidocaine.html" class="file-link"><div class="file-name">Lidocaine Application</div><div class="file-desc">Pharmacology Lab:Lidocaine Mode of Action</div></a>
+             <a href="phlebotomy.html" class="file-link"><div class="file-name">Phlebotomy Problem-Solving and troubleshooting</div><div class="file-desc">Phlemotomy Lesson</div></a>
             <a href="punnett.html" class="file-link"><div class="file-name">Punnett Square</div><div class="file-desc">Genetics Calculator</div></a>
             <a href="https://hafeezfaridi.github.io/AI-learning/GABA.html" class="file-link"><div class="file-name">Seizures</div><div class="file-desc">NeuroSim:Seizure Pathophysiology</div></a>
             <a href="stroke.html" class="file-link"><div class="file-name">Stroke Study Guide</div><div class="file-desc">Stroke Interactive Study Guide</div></a>      
