--- a/index.html
+++ b/index.html
@@ -776,6 +776,10 @@
                         <h3>Hangman<span class="new-badge">NEW</span></h3>
                         <p>Word Guessing Game</p>
                     </a>
+                      <a href="pictionary.html" class="resource-card">
+                        <h3>Pictionary Game<span class="new-badge">NEW</span></h3>
+                        <p>Picture Game</p>
+                    </a>
                 </div>
             </section>
 
