--- a/index.html
+++ b/index.html
@@ -256,6 +256,37 @@
                 </div>
             </section>
 
+                        <!-- Case Studies -->
+            <section class="category">
+                <h2>💼 Case Studies</h2>
+                <div class="resources">
+                    <a href="wannacry.html" class="resource-card">
+                        <h3>Case Study Ransomware Exploration</h3>
+                        <p>WannaCry Ransomware Attack</p>
+                    </a>
+                    <a href="https://sands-mvcc.github.io/CMMC/casestudy.html" class="resource-card">
+                        <h3>Case Study Acme Technologies</h3>
+                        <p>Cybersecurity Audit Case Study</p>
+                    </a>
+                    <a href="https://sands-mvcc.github.io/CMMC/casestudy1.html" class="resource-card">
+                        <h3>Patriot Defense Systems, Inc.</h3>
+                        <p>Case Study Policy Writing</p>
+                    </a>
+                    <a href="https://jjirik77.github.io/cmmc/case_gem.html" class="resource-card">
+                        <h3>DefenseCore Inc.</h3>
+                        <p>Case Study DoW</p>
+                    </a>
+                    <a href="https://jjirik77.github.io/cmmc/case_gem.html" class="resource-card">
+                        <h3>Stratum Defense</h3>
+                        <p>Case Study Business</p>
+                    </a>
+                    <a href="https://sands-mvcc.github.io/CMMC/aegis.html" class="resource-card">
+                        <h3>Aegis Tactical</h3>
+                        <p>case Study Business</p>
+                    </a>
+                </div>
+            </section>
+
             <!-- Networking Protocols & Technologies -->
             <section class="category">
                 <h2>🌐 Networking Protocols & Technologies</h2>
