--- a/index.html
+++ b/index.html
@@ -284,6 +284,11 @@
                         <h3>Aegis Tactical</h3>
                         <p>case Study Business</p>
                     </a>
+                                        </a>
+                    <a href="https://sands-mvcc.github.io/CMMC/" class="resource-card">
+                        <h3>DoW CMMC Program Portal</h3>
+                        <p>case CMMC Study Guide</p>
+                    </a>
                 </div>
             </section>
 
