--- a/index.html
+++ b/index.html
@@ -842,8 +842,13 @@
                         <h3>Claude Navigation</h3>
                         <p>Claude AI Helper</p>
                     </a>
-                    <a href="flashcard.html" class="resource-card">
+                    <a href="https://jjirik77.github.io/AI_Resources/flashcards.html" class="resource-card">
                         <h3>Flashcards</h3>
+                        <p>Computer Science</p>
+                    </a>
+                    </a>
+                    <a href="flashcard.html" class="resource-card">
+                        <h3>Flashcards1</h3>
                         <p>Study Flashcard System</p>
                     </a>
                     <a href="Perplexity.html" class="resource-card">
