--- a/index.html
+++ b/index.html
@@ -812,6 +812,16 @@
                         <h3>Hangman<span class="new-badge">NEW</span></h3>
                         <p>Word Guessing Game</p>
                     </a>
+                      <a href="nounverbs.html" class="resource-card">
+                        <h3>Noun Verb Game<span class="new-badge">NEW</span></h3>
+                        <p>Noun Verb Game</p>
+                    </a>
+                    </a>
+                      <a href="noundetective.html" class="resource-card">
+                        <h3>Noun Identification Game<span class="new-badge">NEW</span></h3>
+                        <p>Noun Detective Game</p>
+                    </a>
+                    </a>
                       <a href="pictionary.html" class="resource-card">
                         <h3>Pictionary Game<span class="new-badge">NEW</span></h3>
                         <p>Picture Game</p>
