--- a/index.html
+++ b/index.html
@@ -201,10 +201,6 @@
                         <h3>Password Cracker</h3>
                         <p>Password Security Analysis</p>
                     </a>
-                    <a href="cve.html" class="resource-card">
-                        <h3>CVE</h3>
-                        <p>Common Vulnerabilities</p>
-                    </a>
                     <a href="cybercerts.html" class="resource-card">
                         <h3>Cyber Certifications</h3>
                         <p>Security Certifications Guide</p>
@@ -220,10 +216,6 @@
                     <a href="epnc_dashboard.html" class="resource-card">
                         <h3>EPNC Dashboard</h3>
                         <p>Cybersecurity Dashboard</p>
-                    </a>
-                    <a href="epnc_pres.html" class="resource-card">
-                        <h3>EPNC Presentation</h3>
-                        <p>EPNC Overview</p>
                     </a>
                     <a href="firewall.html" class="resource-card">
                         <h3>Firewall</h3>
@@ -260,32 +252,32 @@
             <section class="category">
                 <h2>💼 Case Studies</h2>
                 <div class="resources">
-                    <a href="wannacry.html" class="resource-card">
+                    <a href="wannacry.html" class="new-badge">NEW</span></h3>
                         <h3>Case Study Ransomware Exploration</h3>
                         <p>WannaCry Ransomware Attack</p>
                     </a>
-                    <a href="https://sands-mvcc.github.io/CMMC/casestudy.html" class="resource-card">
+                    <a href="https://sands-mvcc.github.io/CMMC/casestudy.html" class="class="new-badge">NEW</span></h3>
                         <h3>Case Study Acme Technologies</h3>
                         <p>Cybersecurity Audit Case Study</p>
                     </a>
-                    <a href="https://sands-mvcc.github.io/CMMC/casestudy1.html" class="resource-card">
+                    <a href="https://sands-mvcc.github.io/CMMC/casestudy1.html" class="rclass="new-badge">NEW</span></h3>
                         <h3>Patriot Defense Systems, Inc.</h3>
                         <p>Case Study Policy Writing</p>
                     </a>
-                    <a href="https://jjirik77.github.io/cmmc/case_gem.html" class="resource-card">
+                    <a href="https://jjirik77.github.io/cmmc/case_gem.html" class="class="new-badge">NEW</span></h3>
                         <h3>DefenseCore Inc.</h3>
                         <p>Case Study DoW</p>
                     </a>
-                    <a href="https://jjirik77.github.io/cmmc/case_gem.html" class="resource-card">
+                    <a href="https://jjirik77.github.io/cmmc/case_gem.html" class="class="new-badge">NEW</span></h3>
                         <h3>Stratum Defense</h3>
                         <p>Case Study Business</p>
                     </a>
-                    <a href="https://sands-mvcc.github.io/CMMC/aegis.html" class="resource-card">
+                    <a href="https://sands-mvcc.github.io/CMMC/aegis.html" class="class="new-badge">NEW</span></h3>
                         <h3>Aegis Tactical</h3>
                         <p>case Study Business</p>
                     </a>
                                         </a>
-                    <a href="https://sands-mvcc.github.io/CMMC/" class="resource-card">
+                    <a href="https://sands-mvcc.github.io/CMMC/" class="class="new-badge">NEW</span></h3>
                         <h3>DoW CMMC Program Portal</h3>
                         <p>case CMMC Study Guide</p>
                     </a>
@@ -636,6 +628,10 @@
                         <h3>Programming Arrays</h3>
                         <p>Arrays</p>
                     </a>
+                        <a href="https://jjirik77.github.io/AI_Resources/flashcards.html" class="resource-card">
+                        <h3>Flashcards</h3>
+                        <p>Computer Science</p>
+                    </a>
                     <a href="commands.html" class="resource-card">
                         <h3>Command Reference</h3>
                         <p>System Commands</p>
@@ -852,9 +848,9 @@
                         <h3>Claude Navigation</h3>
                         <p>Claude AI Helper</p>
                     </a>
-                    <a href="https://jjirik77.github.io/AI_Resources/flashcards.html" class="resource-card">
-                        <h3>Flashcards</h3>
-                        <p>Computer Science</p>
+                    <a href="epnc_pres.html" class="resource-card">
+                        <h3>EPNC Presentation</h3>
+                        <p>EPNC Overview</p>
                     </a>
                     </a>
                     <a href="flashcard.html" class="resource-card">
