--- a/index.html
+++ b/index.html
@@ -252,33 +252,33 @@
             <section class="category">
                 <h2>💼 Case Studies</h2>
                 <div class="resources">
-                    <a href="wannacry.html" class="new-badge">NEW</span></h3>
-                        <h3>Case Study Ransomware Exploration</h3>
+                    <a href="wannacry.html" class="resource-card">
+                        <h3>Case Study Ransomware Exploration<span class="new-badge">NEW</span></h3>
                         <p>WannaCry Ransomware Attack</p>
                     </a>
-                    <a href="https://sands-mvcc.github.io/CMMC/casestudy.html" class="class="new-badge">NEW</span></h3>
-                        <h3>Case Study Acme Technologies</h3>
+                    <a href="https://sands-mvcc.github.io/CMMC/casestudy.html" class="resource-card">
+                        <h3>Case Study Acme Technologies<span class="new-badge">NEW</span></h3>
                         <p>Cybersecurity Audit Case Study</p>
                     </a>
-                    <a href="https://sands-mvcc.github.io/CMMC/casestudy1.html" class="rclass="new-badge">NEW</span></h3>
-                        <h3>Patriot Defense Systems, Inc.</h3>
+                    <a href="https://sands-mvcc.github.io/CMMC/casestudy1.html" class="resource-card">
+                        <h3>Patriot Defense Systems, Inc.<span class="new-badge">NEW</span></h3>
                         <p>Case Study Policy Writing</p>
                     </a>
-                    <a href="https://jjirik77.github.io/cmmc/case_gem.html" class="class="new-badge">NEW</span></h3>
-                        <h3>DefenseCore Inc.</h3>
+                    <a href="https://jjirik77.github.io/cmmc/case_gem.html" class="resource-card">
+                        <h3>DefenseCore Inc.<span class="new-badge">NEW</span></h3>
                         <p>Case Study DoW</p>
                     </a>
-                    <a href="https://jjirik77.github.io/cmmc/case_gem.html" class="class="new-badge">NEW</span></h3>
-                        <h3>Stratum Defense</h3>
+                    <a href="https://jjirik77.github.io/cmmc/case_gem.html" class="resource-card">
+                        <h3>Stratum Defense<span class="new-badge">NEW</span></h3>
                         <p>Case Study Business</p>
                     </a>
-                    <a href="https://sands-mvcc.github.io/CMMC/aegis.html" class="class="new-badge">NEW</span></h3>
-                        <h3>Aegis Tactical</h3>
+                    <a href="https://sands-mvcc.github.io/CMMC/aegis.html" class="resource-card">
+                        <h3>Aegis Tactical<span class="new-badge">NEW</span></h3>
                         <p>case Study Business</p>
                     </a>
                                         </a>
-                    <a href="https://sands-mvcc.github.io/CMMC/" class="class="new-badge">NEW</span></h3>
-                        <h3>DoW CMMC Program Portal</h3>
+                    <a href="https://sands-mvcc.github.io/CMMC/" class="resource-card">
+                        <h3>DoW CMMC Program Portal<span class="new-badge">NEW</span></h3>
                         <p>case CMMC Study Guide</p>
                     </a>
                 </div>
@@ -432,7 +432,7 @@
                         <p>Genetics Fundamentals</p>
                     </a>
                     <a href="https://hafeezfaridi.github.io/AI-learning/Lidocaine.html" class="resource-card">
-                        <h3>Lidocaine Application</h3>
+                        <h3>Lidocaine Application<span class="new-badge">NEW</span></h3>
                         <p>Pharmacology Lab: Lidocaine Mode of Action</p>
                     </a>
                     <a href="nurse101.html" class="resource-card">
@@ -440,7 +440,7 @@
                         <p>Clinical Reasoning Lab</p>
                     </a>
                     <a href="phlebotomy.html" class="resource-card">
-                        <h3>Phlebotomy Problem-Solving</h3>
+                        <h3>Phlebotomy Problem-Solving<span class="new-badge">NEW</span></h3>
                         <p>Phlebotomy Lesson</p>
                     </a>
                     <a href="punnett.html" class="resource-card">
@@ -448,11 +448,11 @@
                         <p>Genetics Calculator</p>
                     </a>
                     <a href="https://hafeezfaridi.github.io/AI-learning/GABA.html" class="resource-card">
-                        <h3>Seizures</h3>
+                        <h3>Seizures<span class="new-badge">NEW</span></h3>
                         <p>NeuroSim: Seizure Pathophysiology</p>
                     </a>
                     <a href="stroke.html" class="resource-card">
-                        <h3>Stroke Study Guide</h3>
+                        <h3>Stroke Study Guide<span class="new-badge">NEW</span></h3>
                         <p>Stroke Interactive Study Guide</p>
                     </a>
                 </div>
