--- a/composers.html
+++ b/composers.html
@@ -1255,6 +1255,7 @@
                     era: 'Baroque',
                     content: `
                         <h3>J.S. Bach - The Master of Counterpoint</h3>
+                        <img src="bach01.png" alt="Johann Sebastian Bach" style="max-width: 300px; width: 100%; height: auto; border-radius: 10px; margin: 20px 0; display: block; border: 3px solid #e94560; box-shadow: 0 4px 15px rgba(0,0,0,0.5);">
                         <p><strong>Major Contributions:</strong></p>
                         <ul style="line-height: 2; margin: 15px 0 15px 30px;">
                             <li>Perfected Baroque counterpoint and fugue form</li>
