--- a/index.html
+++ b/index.html
@@ -817,7 +817,11 @@
                         <h3>Noun Identification Game<span class="new-badge">NEW</span></h3>
                         <p>Noun Detective Game</p>
                     </a>
+                      <a href="boardgame.html" class="resource-card">
+                        <h3>Cyber Board Game<span class="new-badge">NEW</span></h3>
+                        <p>Board Game</p>
                     </a>
+                </a>
                       <a href="pictionary.html" class="resource-card">
                         <h3>Pictionary Game<span class="new-badge">NEW</span></h3>
                         <p>Picture Game</p>
