--- a/index.html
+++ b/index.html
@@ -807,6 +807,10 @@
                     <a href="hangman.html" class="resource-card">
                         <h3>Hangman<span class="new-badge">NEW</span></h3>
                         <p>Word Guessing Game</p>
+                    </a>                     
+                    <a href="moduluscounter.html" class="resource-card">
+                        <h3>Modulus Speed Game<span class="new-badge">NEW</span></h3>
+                        <p>Math Speed Game</p>
                     </a>
                       <a href="nounverbs.html" class="resource-card">
                         <h3>Noun Verb Game<span class="new-badge">NEW</span></h3>
