--- a/index.html
+++ b/index.html
@@ -569,6 +569,10 @@
                         <h3>Factors</h3>
                         <p>Prime Factorization</p>
                     </a>
+                    <a href="modulusmath.html" class="resource-card">
+                        <h3>Modulus Math Simulator</h3>
+                        <p>Clock Style Si8mulator</p>
+                    </a>
                     <a href="numbersystems.html" class="resource-card">
                         <h3>Number Systems</h3>
                         <p>Multiple Base Systems</p>
