--- a/index.html
+++ b/index.html
@@ -845,6 +845,10 @@
                         <h3>American Quarter<span class="new-badge">NEW</span></h3>
                         <p>US Quarter History and Education</p>
                     </a>
+                    <a href="timeline.html" class="resource-card">
+                        <h3>Interactive Timeline<span class="new-badge">NEW</span></h3>
+                        <p>US History Timeline</p>
+                    </a>
                 </div>
             </section>
 
