--- a/index.html
+++ b/index.html
@@ -877,6 +877,10 @@
                         <h3>Perplexity</h3>
                         <p>Perplexity AI Guide</p>
                     </a>
+                    <a href="types.html" class="resource-card">
+                        <h3>AI Fundamentals Interactive Study Guide</h3>
+                        <p>Study Guide</p>
+                    </a>
                     <a href="rubric.html" class="resource-card">
                         <h3>Rubric Generator</h3>
                         <p>Assessment Rubrics</p>
