--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                 </div>
             </section>
 
-            <!-- Career & Business -->
+            <!-- Busines, Career Technologies & Economics -->
             <section class="category">
                 <h2>💼 Career & Business</h2>
                 <div class="resources">
@@ -706,6 +706,10 @@
                     <a href="fire.html" class="resource-card">
                         <h3>Fire Safety</h3>
                         <p>Electrical Fire Safety</p>
+                    </a>
+                    <a href="flow-of-income.html" class="resource-card">
+                        <h3>Circular Flow of Income</h3>
+                        <p>Economics flow of Income</p>
                     </a>
                     <a href="gaap.html" class="resource-card">
                         <h3>GAAP</h3>
