--- a/index.html
+++ b/index.html
@@ -873,6 +873,10 @@
                         <h3>Flashcards1</h3>
                         <p>Study Flashcard System</p>
                     </a>
+                    <a href="itenerary.html" class="resource-card">
+                        <h3>Building a Trip Itenary</h3>
+                        <p>Interactive Itenerary</p>
+                    </a>
                     <a href="Perplexity.html" class="resource-card">
                         <h3>Perplexity</h3>
                         <p>Perplexity AI Guide</p>
