--- a/index.html
+++ b/index.html
@@ -687,10 +687,14 @@
                 </div>
             </section>
 
-            <!-- Busines, Career Technologies & Economics -->
+            <!-- Business, Career Technologies & Economics -->
             <section class="category">
                 <h2>💼 Career & Business</h2>
                 <div class="resources">
+                    <a href="studyguide.html" class="resource-card">
+                        <h3>Type of Businesses</h3>
+                        <p>Interactive Study Guide</p>
+                    </a>
                     <a href="CareerExploration.html" class="resource-card">
                         <h3>Career Exploration</h3>
                         <p>Career Path Explorer</p>
