--- a/index.html
+++ b/index.html
@@ -720,8 +720,8 @@
                         <p>Accounting Principles</p>
                     </a>
                     <a href="teamproject.html" class="resource-card">
-                        <h3>Team Project</h3>
-                        <p>Collaborative Projects</p>
+                        <h3>Team Project Hamlet</h3>
+                        <p>Collaborative Projects Hamlet</p>
                     </a>
                 </div>
             </section>
