--- a/index.html
+++ b/index.html
@@ -864,6 +864,10 @@
                         <h3>Instructor Profile</h3>
                         <p>Instructor Profile</p>
                     </a>
+                     <a href="better.html" class="resource-card">
+                        <h3>Interactive AI Prompting Guide</h3>
+                        <p>Study Guide AI Prompting</p>
+                    </a>
                     <a href="claudenav.html" class="resource-card">
                         <h3>Claude Navigation</h3>
                         <p>Claude AI Helper</p>
