--- a/index.html
+++ b/index.html
@@ -864,7 +864,11 @@
                         <h3>Instructor Profile</h3>
                         <p>Instructor Profile</p>
                     </a>
-                     <a href="better.html" class="resource-card">
+                     <a href="burst.html" class="resource-card">
+                        <h3>Interactive Guide to AI Detection</h3>
+                        <p>Study Guide to Burstiness and Perplexity</p>
+                    </a>
+                    <a href="better.html" class="resource-card">
                         <h3>Interactive AI Prompting Guide</h3>
                         <p>Study Guide AI Prompting</p>
                     </a>
