--- a/index.html
+++ b/index.html
@@ -860,6 +860,10 @@
             <section class="category">
                 <h2>🤖 AI & Productivity Tools</h2>
                 <div class="resources">
+                      <a href="airesistant.html" class="resource-card">
+                        <h3>Instructor Guide to Building AI Resistant Assignments</h3>
+                        <p>AI Resistant</p>
+                    </a>
                     <a href="bio.html" class="resource-card">
                         <h3>Instructor Profile</h3>
                         <p>Instructor Profile</p>
@@ -880,10 +884,13 @@
                         <h3>EPNC Presentation</h3>
                         <p>EPNC Overview</p>
                     </a>
+                     <a href="epnc_pres.html" class="resource-card">
+                        <h3>EPNC Presentation</h3>
+                        <p>EPNC Overview</p>
                     </a>
-                    <a href="flashcard.html" class="resource-card">
-                        <h3>Flashcards1</h3>
-                        <p>Study Flashcard System</p>
+                    <a href="ethics.html" class="resource-card">
+                        <h3>Ethics and AI</h3>
+                        <p>Study Guide Ethics and AI</p>
                     </a>
                     <a href="itenerary.html" class="resource-card">
                         <h3>Building a Trip Itenary</h3>
