--- a/index.html
+++ b/index.html
@@ -908,6 +908,10 @@
                         <h3>Rubric Generator</h3>
                         <p>Assessment Rubrics</p>
                     </a>
+                    <a href="transform.html" class="resource-card">
+                        <h3>Using AI to Transform Teaching and Learning</h3>
+                        <p>Guide to AI Transformation in Education</p>
+                    </a>
                     <a href="survey.html" class="resource-card">
                         <h3>Survey Tool</h3>
                         <p>Survey Creation</p>
