--- a/index.html
+++ b/index.html
@@ -864,6 +864,10 @@
                         <h3>Instructor Guide to Building AI Resistant Assignments</h3>
                         <p>AI Resistant</p>
                     </a>
+                    <a href="policy.html" class="resource-card">
+                        <h3>AI Classroom Policy Builder</h3>
+                        <p>Policy Builder</p>
+                    </a>
                     <a href="bio.html" class="resource-card">
                         <h3>Instructor Profile</h3>
                         <p>Instructor Profile</p>
