--- a/index.html
+++ b/index.html
@@ -849,6 +849,10 @@
                         <h3>American Quarter<span class="new-badge">NEW</span></h3>
                         <p>US Quarter History and Education</p>
                     </a>
+                    <a href="philosophers.html" class="resource-card">
+                        <h3>Great Philosophers Through History<span class="new-badge">NEW</span></h3>
+                        <p>Philosophy</p>
+                    </a>
                     <a href="timeline.html" class="resource-card">
                         <h3>Interactive Timeline<span class="new-badge">NEW</span></h3>
                         <p>US History Timeline</p>
@@ -868,6 +872,10 @@
                         <h3>AI Classroom Policy Builder</h3>
                         <p>Policy Builder</p>
                     </a>
+                    <a href="leaders.html" class="resource-card">
+                        <h3>Leaders in the AI Industry</h3>
+                        <p>AI Leadership</p>
+                    </a>
                     <a href="bio.html" class="resource-card">
                         <h3>Instructor Profile</h3>
                         <p>Instructor Profile</p>
@@ -879,6 +887,10 @@
                     <a href="better.html" class="resource-card">
                         <h3>Interactive AI Prompting Guide</h3>
                         <p>Study Guide AI Prompting</p>
+                    </a>
+                    <a href="short.html" class="resource-card">
+                        <h3>ChatGPT Short Cut Keys</h3>
+                        <p>Guide to ChatGPT</p>
                     </a>
                     <a href="claudenav.html" class="resource-card">
                         <h3>Claude Navigation</h3>
@@ -903,6 +915,10 @@
                     <a href="Perplexity.html" class="resource-card">
                         <h3>Perplexity</h3>
                         <p>Perplexity AI Guide</p>
+                    </a>
+                     <a href="https://sands-mvcc.github.io/AI/chatgtpstudents.html#links" class="resource-card">
+                        <h3>Student AI Resources</h3>
+                        <p>Student AI Resources</p>
                     </a>
                     <a href="types.html" class="resource-card">
                         <h3>AI Fundamentals Interactive Study Guide</h3>
