--- a/index.html
+++ b/index.html
@@ -868,6 +868,10 @@
                         <h3>Instructor Guide to Building AI Resistant Assignments</h3>
                         <p>AI Resistant</p>
                     </a>
+                     <a href="graphics.html" class="resource-card">
+                        <h3>Using AI to Build Instructional Graphics</h3>
+                        <p>Graphic Arts</p>
+                    </a>
                     <a href="policy.html" class="resource-card">
                         <h3>AI Classroom Policy Builder</h3>
                         <p>Policy Builder</p>
