--- a/index.html
+++ b/index.html
@@ -264,6 +264,14 @@
                         <h3>Patriot Defense Systems, Inc.<span class="new-badge">NEW</span></h3>
                         <p>Case Study Policy Writing</p>
                     </a>
+                    <a href="notpetya.html" class="resource-card">
+                        <h3>NotPetYa Ransomware Attack<span class="new-badge">NEW</span></h3>
+                        <p>Case Study NotPetYa Ransomware</p>
+                    </a>
+                   <a href="pipeline.html" class="resource-card">
+                        <h3>Colonial Pipeline Case Study<span class="new-badge">NEW</span></h3>
+                        <p>Case Study Ransomware Pipeline</p>
+                    </a>
                     <a href="https://jjirik77.github.io/cmmc/case_gem.html" class="resource-card">
                         <h3>DefenseCore Inc.<span class="new-badge">NEW</span></h3>
                         <p>Case Study DoW</p>
