--- a/index.html
+++ b/index.html
@@ -268,7 +268,15 @@
                         <h3>NotPetYa Ransomware Attack<span class="new-badge">NEW</span></h3>
                         <p>Case Study NotPetYa Ransomware</p>
                     </a>
-                   <a href="pipeline.html" class="resource-card">
+                    <a href="pipeline.html" class="resource-card">
+                        <h3>Colonial Pipeline Case Study<span class="new-badge">NEW</span></h3>
+                        <p>Case Study Ransomware Pipeline</p>
+                    </a>
+                    <a href="pipeline1.html" class="resource-card">
+                        <h3>Colonial Pipeline Case Study<span class="new-badge">NEW</span></h3>
+                        <p>Case Study Ransomware Pipeline</p>
+                    </a>
+                   <a href="pipeline2.html" class="resource-card">
                         <h3>Colonial Pipeline Case Study<span class="new-badge">NEW</span></h3>
                         <p>Case Study Ransomware Pipeline</p>
                     </a>
