--- a/index.html
+++ b/index.html
@@ -538,6 +538,10 @@
                         <h3>Non-Inverting Amp</h3>
                         <p>Non-Inverting Op-Amp</p>
                     </a>
+                    <a href="ohmslaw.html" class="resource-card">
+                        <h3>Ohms Law Basics</h3>
+                        <p>Ohm's law Simulator</p>
+                    </a>
                     <a href="opamp.html" class="resource-card">
                         <h3>Op-Amp Basics</h3>
                         <p>Operational Amplifiers</p>
