--- a/index.html
+++ b/index.html
@@ -189,10 +189,6 @@
                         <h3>Asymmetrical Encryption</h3>
                         <p>Public Key Cryptography</p>
                     </a>
-                    <a href="attackgame.html" class="resource-card">
-                        <h3>Attack Game</h3>
-                        <p>Cybersecurity Attack Simulator</p>
-                    </a>
                     <a href="cmmc.html" class="resource-card">
                         <h3>CMMC</h3>
                         <p>Cybersecurity Maturity Model</p>
@@ -828,6 +824,10 @@
             <section class="category">
                 <h2>🎮 Games & Interactive Learning</h2>
                 <div class="resources">
+                    <a href="attackgame.html" class="new-badge">NEW</span></h3>
+                        <h3>Attack Game</h3>
+                        <p>Cybersecurity Attack Simulator</p>
+                    </a>
                     <a href="equinegame.html" class="resource-card">
                         <h3>Equine Game<span class="new-badge">NEW</span></h3>
                         <p>Horse-Related Educational Game</p>
@@ -884,11 +884,11 @@
             <section class="category">
                 <h2>🤖 AI & Productivity Tools</h2>
                 <div class="resources">
-                      <a href="airesistant.html" class="resource-card">
+                      <a href="airesistant.html" class="new-badge">NEW</span></h3>
                         <h3>Instructor Guide to Building AI Resistant Assignments</h3>
                         <p>AI Resistant</p>
                     </a>
-                     <a href="graphics.html" class="resource-card">
+                     <a href="graphics.html" class="new-badge">NEW</span></h3>
                         <h3>Using AI to Build Instructional Graphics</h3>
                         <p>Graphic Arts</p>
                     </a>
@@ -896,7 +896,7 @@
                         <h3>AI Classroom Policy Builder</h3>
                         <p>Policy Builder</p>
                     </a>
-                    <a href="leaders.html" class="resource-card">
+                    <a href="leaders.html" class="new-badge">NEW</span></h3>
                         <h3>Leaders in the AI Industry</h3>
                         <p>AI Leadership</p>
                     </a>
@@ -904,15 +904,15 @@
                         <h3>Instructor Profile</h3>
                         <p>Instructor Profile</p>
                     </a>
-                     <a href="burst.html" class="resource-card">
+                     <a href="burst.html" class="new-badge">NEW</span></h3>
                         <h3>Interactive Guide to AI Detection</h3>
                         <p>Study Guide to Burstiness and Perplexity</p>
                     </a>
-                    <a href="better.html" class="resource-card">
+                    <a href="better.html" class="new-badge">NEW</span></h3>
                         <h3>Interactive AI Prompting Guide</h3>
                         <p>Study Guide AI Prompting</p>
                     </a>
-                    <a href="short.html" class="resource-card">
+                    <a href="short.html" class="new-badge">NEW</span></h3>
                         <h3>ChatGPT Short Cut Keys</h3>
                         <p>Guide to ChatGPT</p>
                     </a>
@@ -932,7 +932,7 @@
                         <h3>Ethics and AI</h3>
                         <p>Study Guide Ethics and AI</p>
                     </a>
-                    <a href="itenerary.html" class="resource-card">
+                    <a href="itenerary.html" class="new-badge">NEW</span></h3>
                         <h3>Building a Trip Itenary</h3>
                         <p>Interactive Itenerary</p>
                     </a>
@@ -952,7 +952,7 @@
                         <h3>Rubric Generator</h3>
                         <p>Assessment Rubrics</p>
                     </a>
-                    <a href="transform.html" class="resource-card">
+                    <a href="transform.html" class="new-badge">NEW</span></h3>
                         <h3>Using AI to Transform Teaching and Learning</h3>
                         <p>Guide to AI Transformation in Education</p>
                     </a>
